Fix vertical alignment of AuthModal content, while remaining scrollable.

--- a/resources/assets/js/Auth/AuthModal.scss
+++ b/resources/assets/js/Auth/AuthModal.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   padding: 40px 20px 60px;
   @include breakpoint(760px) {
-    padding: 35px 100px 60px;
+    padding: 35px 100px 35px;
   }
 }
 .AuthModal__loading-overlay {
@@ -41,7 +41,7 @@
   margin-bottom: 65px;
   margin-right: 40px;
   @include breakpoint(760px) {
-    margin-right: 0;
+    margin-right: 140px;
     margin-bottom: 0;
   }
 }
